# LargePrimeNumbers

./: .clang-format  .clang-tidy  .cmake-format  .cspell.json  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark_cfrac.cpp  benchmark_quadratic_sieve.cpp  plot_stats_by_bases_count.cpp
benchmarks/utility/: becnhmark_factorization_with_params.h  becnmark_data.cpp  benchmark_data.h  execution_time.h
example/: CMakeLists.txt  example.cpp
src/: check_potential_factor.h  common.h  concepts.h  example.cpp  fermat_pseudoprimality_test.cpp  fermat_pseudoprimarity_test.h  find_highest_power_of.cpp  find_highest_power_of.h  legendre_symbol.cpp  legendre_symbol.h  logging.h  naive_primary_test.cpp  naive_primary_test.h  pollard_rho_find_factor.cpp  pollard_rho_find_factor.h  pollard_rho_one_find_factor.cpp  pollard_rho_one_find_factor.h  random.cpp  random.h  strong_pseudoprimality_test.h  trial_find_factor.cpp  trial_find_factor.h  trial_primality_test.cpp  trial_primality_test.h  utility.h
src/cfrac/: bhascara_brounker_sequence.cpp  bhascara_brounker_sequence.h  find_factor_cfrac.cpp  find_factor_cfrac.h
src/dixons_algorithm/: dixon_find_factor.cpp  dixon_find_factor.h  dixons_algorithm.cpp  dixons_algorithm.h  f2_matrix.cpp  f2_matrix.h  factor_using_candidate_combination.cpp  factor_using_candidate_combination.h
src/fermat_pseudoprimality/: fermat_pseudoprimality_test.cpp  fermat_pseudoprimality_test.h
src/legendre_symbol/: legendre_symbol.cpp  legendre_symbol.h
src/pollard_rho/: pollard_rho_find_factor.cpp  pollard_rho_find_factor.h  pollard_rho_one_find_factor.cpp  pollard_rho_one_find_factor.h
src/quadratic_sieve/: find_congruence.cpp  find_congruence.h  find_factor_base.cpp  find_factor_base.h  find_factor_quadratic_sieve.cpp  find_factor_quadratic_sieve.h  quadratic_sieve.h
src/strong_pseudoprimality/: strong_pseudoprimality_test.cpp  strong_pseudoprimality_test.h
tests/: CMakeLists.txt  data.cpp  data.h  primes_data.h  test.cpp  test_bhascara_brounker_sequence.cpp  test_f2_matrix.cpp  test_factor_base.cpp  test_fermat_pseudoprimality.cpp  test_find_factors.cpp  test_gaussian_elemination_algorithm.cpp  test_primality_tests.cpp  test_trivial_find_factor.cpp  test_trivial_primality.cpp  testing_utility.h
